--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "songcheat-viewer",
+  "name": "songcheat-demos",
   "version": "1.0.0",
-  "description": "Little (jQuery) app for viewing and playing the sample songcheats as well as editing lyrics.",
-  "main": "dist/songcheat-viewer.umd.js",
-  "module": "dist/songcheat-viewer.emd.js",
+  "description": "Demo CLI utilities and jQuery apps using songcheat-core",
   "scripts": {
-    "clean": "rm -f dist/*.js*",
-    "lint": "standard --fix src/*js test/*.js *.js",
-    "build": "npm run clean && npm run lint && rollup -c",
-    "dev": "npm run lint && rollup -cw",
-    "uglify.umd": "node_modules/uglify-es/bin/uglifyjs dist/songcheat-viewer.umd.js --compress --mangle --source-map \"content='dist/songcheat-viewer.umd.js.map'\" -o dist/songcheat-viewer.umd.min.js",
-    "uglify.esm": "node_modules/uglify-es/bin/uglifyjs dist/songcheat-viewer.esm.js --compress --mangle --source-map \"content='dist/songcheat-viewer.esm.js.map'\" -o dist/songcheat-viewer.esm.min.js",
+    "clean": "rm -f dist/* && rm -f samples/*.json && rm -f samples/*.lyrics && rm -f samples/*.log",
+    "lint": "standard --fix src/*js",
+    "build": "npm run clean && node cli/cc --output dist/samples.json samples/*.txt && npm run lint && rollup -c",
+    "dev": "npm run build && rollup -cw",
+    "uglify.umd": "node_modules/uglify-es/bin/uglifyjs dist/viewer.umd.js --compress --mangle --source-map \"content='dist/viewer.umd.js.map'\" -o dist/viewer.umd.min.js",
+    "uglify.esm": "node_modules/uglify-es/bin/uglifyjs dist/viewer.esm.js --compress --mangle --source-map \"content='dist/viewer.esm.js.map'\" -o dist/viewer.esm.min.js",
     "uglify": "npm run uglify.umd && npm run uglify.esm",
-    "release": "npm run clean && npm run lint && rollup -c && npm run uglify"
+    "release": "npm run build && npm run uglify"
   },
   "keywords": [
     "songcheat",
@@ -26,7 +24,10 @@
   "license": "ISC",
   "dependencies": {
     "songcheat-core": "file:../songcheat-core",
-    "songcheat-samples": "file:../songcheat-samples"
+    "command-line-args": "^4.0.7",
+    "command-line-usage": "^4.0.2",
+    "json-stringify-pretty-compact": "^1.0.4",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "rollup-plugin-commonjs": "^8.2.6",
