--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Demo CLI utilities and jQuery apps using songcheat-core",
   "scripts": {
     "clean": "rm -f dist/* && rm -f samples/*.json && rm -f samples/*.lyrics && rm -f samples/*.log",
+    "cc": "node cli/cc --output dist/samples.json samples/*.txt",
     "lint": "standard --fix src/*js",
-    "build": "npm run clean && node cli/cc --output dist/samples.json samples/*.txt && npm run lint && rollup -c",
-    "dev": "npm run build && rollup -cw",
+    "start": "npm run clean && npm run cc && npm run lint && rollup -cw",
     "uglify.umd": "node_modules/uglify-es/bin/uglifyjs dist/viewer.umd.js --compress --mangle --source-map \"content='dist/viewer.umd.js.map'\" -o dist/viewer.umd.min.js",
     "uglify.esm": "node_modules/uglify-es/bin/uglifyjs dist/viewer.esm.js --compress --mangle --source-map \"content='dist/viewer.esm.js.map'\" -o dist/viewer.esm.min.js",
     "uglify": "npm run uglify.umd && npm run uglify.esm",
-    "release": "npm run build && npm run uglify"
+    "build": "npm run clean && npm run cc && npm run lint && rollup -c && npm run uglify"
   },
   "keywords": [
     "songcheat",
