--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rm -f dist/* && rm -f build/* && rm -f samples/*.json && rm -f samples/*.lyrics && rm -f samples/*.log",
     "cc": "node cli/cc --output dist/samples.json samples/*.txt",
     "lint": "standard --fix src/*js",
-    "start": "npm run clean && npm run cc && npm run lint && rollup -cw",
+    "start": "npm run cc && npm run lint && rollup -cw",
     "uglify.umd": "node_modules/uglify-es/bin/uglifyjs build/viewer.umd.js --compress --mangle --source-map \"content='build/viewer.umd.js.map'\" -o build/viewer.umd.min.js",
     "uglify.esm": "node_modules/uglify-es/bin/uglifyjs build/viewer.esm.js --compress --mangle --source-map \"content='build/viewer.esm.js.map'\" -o build/viewer.esm.min.js",
     "uglify": "npm run uglify.umd && npm run uglify.esm",
