npm run watch: uses npm-watch to rebuild samples/json when a txt sample has been modified samples/00-Template.txt is a symlink to songcheat-core/template/template.txt: no need to copy anymore and no risk to edit the wrong file (and a change to the symlinked file is correctly detected)

--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "songcheat-demos",
   "version": "1.0.0",
   "description": "Demo CLI utilities and jQuery apps using songcheat-core",
+  "watch": {
+    "samples": {
+      "patterns": ["samples"],
+      "extensions": "txt",
+      "quiet": true
+    }
+  },
   "scripts": {
     "clean": "rm -f dist/* && rm -f build/* && rm -f samples/*.json && rm -f samples/*.lyrics && rm -f samples/*.log",
-    "cc": "cp -f node_modules/songcheat-core/template/template.txt \"samples/00-Template.txt\" && node cli/cc --output dist/samples.json samples/*.txt",
     "lint": "standard --fix src/*js",
     "start": "npm run cc && npm run lint && rollup -cw",
     "uglify.umd": "node_modules/uglify-es/bin/uglifyjs build/viewer.umd.js --compress --mangle --source-map \"content='build/viewer.umd.js.map'\" -o build/viewer.umd.min.js",
     "uglify.esm": "node_modules/uglify-es/bin/uglifyjs build/viewer.esm.js --compress --mangle --source-map \"content='build/viewer.esm.js.map'\" -o build/viewer.esm.min.js",
     "uglify": "npm run uglify.umd && npm run uglify.esm",
-    "build": "npm run clean && npm run cc && npm run lint && rollup -c && npm run uglify"
+    "build": "npm run clean && npm run cc && npm run lint && rollup -c && npm run uglify",
+    "samples": "node cli/cc --output dist/samples.json samples/*.txt",
+    "watch": "npm-watch"
   },
   "keywords": [
     "songcheat",
@@ -30,6 +38,7 @@
     "readline": "^1.3.0"
   },
   "devDependencies": {
+    "npm-watch": "^0.3.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
