--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "clean": "rm -f dist/* && rm -f build/* && rm -f samples/*.json && rm -f samples/*.lyrics && rm -f samples/*.log",
+    "clean": "rm -f dist/* && rm -f build/* && rm -f samples/*.json && rm -f samples/*.ascii && rm -f samples/*.log",
     "lint": "standard --fix src/*js",
     "start": "npm run samples && npm run lint && rollup -cw",
     "uglify.umd": "node_modules/uglify-es/bin/uglifyjs build/viewer.umd.js --compress --mangle --source-map \"content='build/viewer.umd.js.map'\" -o build/viewer.umd.min.js",
